# kurs_converter

./: README.md
kurs_project/: CMakeLists.txt
kurs_project/resources/: resource_icon.rc  resources.qrc
kurs_project/resources/configs/: server_config.txt
kurs_project/resources/images/: desktop.ini
kurs_project/resources/styles/: style.qss
kurs_project/src/: MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  ServerRequester.cpp  ServerRequester.hpp  SessionsManager.cpp  SessionsManager.hpp  converter.cpp  converter.h  main.cpp  main.h
